Changelog
=========


2.1.1 (unreleased)
------------------

- Nothing changed yet.


2.1.0 (2019-11-12)
------------------

- Add support for Plone 5.1. [buchi]


2.0.3 (2019-11-05)
------------------

- DX migration: ignore flowplayer fields (``width`` and ``height``). [jone]


2.0.2 (2019-11-05)
------------------

- Fix ftw.theming integration [mathias.leimgruber]
- Fix incorrect ID in FTI definition. [jone]
- Dexterity migration: import GS profile even when not migrating content. [jone]


2.0.1 (2019-11-04)
------------------

- Add "getContentType" method to ftw.file.File to support legazy code. [mathias.leimgruber]
- Fix ftw.file.File FTI - wrong factory. [mathias.leimgruber]
- Add ftw.theming integration (Icon). [mathias.leimgruber]


2.0.0 (2019-10-30)
------------------

- Move to Dexterity, remove Archetypes functionality (but not models)
  [mathias.leimgruber, djowett-ftw]
- Add AT to DX migration step [mathias.leimgruber, djowett-ftw]
- Remove TinyMCE integration [djowett-ftw]
- Rename model fields while migrating to dexterity [djowett-ftw]
- Stop drag and drop upload adding two versions [jone, djowett-ftw]
- Add uninstall profile [djowett-ftw]


1.16.2 (2019-05-14)
-------------------

- Improve umlaut support for MSIE file download [busykoala]


1.16.1 (2019-04-02)
-------------------

- Add umlaut support for MSIE file download [busykoala]


1.16.0 (2018-10-16)
-------------------

- Protect the edit form tab (schemata) for the expiration date and effective date
  with a separate permission. [mbaechtold]


1.15.0 (2018-03-14)
-------------------

- Drop support for Plone 4.2. [mbaechtold]

- Prevent exception upon HEAD requests to the download view of a file. [mbaechtold]


1.14.0 (2017-11-16)
-------------------

- A new registry record can be used to prevent redirects to the download
  view of the file. [mbaechtold]

- Rewrite download redirection tests using ftw.testbrowser, drop dependency on
  ftw.testing[splinter]. [lgraf]

