@@ -5,7 +5,8 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add a FileUpload adaptor for plone.namedfile so that ftw.file uploads can
+  work in ftw.simplelayout's FileListingBlock. [djowett-ftw]
 
 
 2.1.0 (2019-11-12)
